# Projekt_ATtiny13

./: ALU.cpp  ALU.h  ALU_Interface.h  ATtiny13.cpp  ATtiny13.h  CMakeLists.txt  I_O_Registers.h  Instruction_Decoder.cpp  Instruction_Decoder.h  Memory.h  ProgramMemory.h  README.md  Registers.h  Stack.h  data_transfer.cpp  data_transfer.h  data_transfer_interface.h  main.cpp  test (kopia).hex  test.hex
